<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@drawable/card_background">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/tour_pic"
        android:layout_width="100dp"
        android:layout_height="130dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/transition_tour_image_2"
        android:transitionName="@string/transition_tour_image" />

    <LinearLayout
        android:layout_width="8dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tourName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tour_name"
        android:fontFamily="@font/valencia"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tourDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tour_description"
        android:layout_marginTop="4dp"/>
</LinearLayout>
    </LinearLayout>
