<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/username"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/age"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@id/textViewUsername"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/gender"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@id/textViewUsername"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"/>

    <!-- Add more TextViews or other views for additional user data -->

</RelativeLayout>