<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.projektmunka.viewModel.userManagementViewModel.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.ForgotPasswordActivity">

        <View
            android:id="@+id/night_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/day_bg" />

        <TextView
            android:layout_width="236dp"
            android:layout_height="40dp"
            android:layout_marginTop="92dp"
            android:gravity="center"
            android:text="@string/title_forgot_password"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.235" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="167dp"
            android:layout_height="58dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/forgot_password_description"
            app:layout_constraintBottom_toTopOf="@+id/til_forgot_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_forgot_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="244dp"
            android:layout_marginRight="30dp"
            android:hint="email"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:text="@{viewModel.email}"
                android:background="@drawable/edit_text_bg"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/btn_lbl_submit"
            android:onClick="@{()->viewModel.resetPassword()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.462" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>