<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.projektmunka.viewModel.userManagementViewModel.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activities.RegisterActivity">

        <View
            android:id="@+id/night_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="174dp" />

        <ImageView
            android:id="@+id/forest8"
            android:layout_width="510dp"
            android:layout_height="153dp"
            android:src="@drawable/forest_silhouette"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="30dp"
            android:hint="username"
            android:paddingBottom="10dp"
            app:hintTextColor="#870E46"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edit_text_bg"
                android:text="@={viewModel.userName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="firstname"
            android:paddingBottom="10dp"
            app:hintTextColor="#870E46"
            app:layout_constraintTop_toBottomOf="@+id/til_register_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_firstName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edit_text_bg"
                android:text="@={viewModel.firstName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="lasttname"
            android:paddingBottom="10dp"
            app:hintTextColor="#870E46"
            app:layout_constraintTop_toBottomOf="@+id/til_register_firstName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_lastName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edit_text_bg"
                android:text="@={viewModel.lastName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Existing Code for Last Name -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"
            android:paddingBottom="10dp"
            app:hintTextColor="#870E46"
            app:layout_constraintTop_toBottomOf="@+id/til_register_lastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edit_text_bg"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            android:paddingBottom="10dp"
            app:hintTextColor="#870E46"
            app:layout_constraintTop_toBottomOf="@+id/til_register_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/edit_text_bg"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_register_confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="confirm password"
            android:paddingBottom="10dp"
            app:hintTextColor="#870E46"
            app:layout_constraintTop_toBottomOf="@+id/til_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:inputType="textPassword"
                android:text="@={viewModel.confirmPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintTop_toBottomOf="@+id/til_register_confirmPassword"
            app:layout_constraintStart_toStartOf="@+id/til_register_confirmPassword"
            app:layout_constraintEnd_toEndOf="@+id/til_register_confirmPassword" />


        <TextView
            android:id="@+id/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/already_have_an_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
